* 2019-11-25 7.10.1.2
* 2019-10-07 7.10.1.1
  fix a bug in cisco wlan accesspoint-modes (InetAddrType)
* 2019-10-04 7.10.1
  add session-usage for palo alto
* 2019-08-30 7.10.0.7
  update glplugin, more nexus hardware-health improvements
* 2019-08-29 7.10.0.6
  reduce runtime for nexus hardware-health
* 2019-08-20 7.10.0.5
  fix EIGRP filtering
* 2019-07-29 7.10.0.4.1
  fix a bug in fortigate ha-role
* 2019-07-22 7.10.0.4
  fix a bug in interface-uptime
* 2019-07-19 7.10.0.3
  fix a bug in interface-uptime
* 2019-07-07 7.10.0.2
  fix a bug in mode ha-role for Fortigate
* 2019-06-25 7.10.0.1
  fix a bug in bgp/route modes for the non-standalone version (InetAddressMaker)
* 2019-06-21 7.10
  remove duplicate routes (ip-table + inet-table)
  --report long+address shows ip addresses for interfaces
* 2019-06-14 7.9.0.4
  finish barracuda ha-role mode
* 2019-06-14 7.9.0.3
  detect f5 firmware versions 14+
* 2019-06-12 7.9.0.2
  fix routes. inetCidrRouteTable does not really replace ipCidrRouteTable
* 2019-06-12 7.9.0.1
  fallback to BGP4-MIB if CISCO-BGP4-MIB is incomplete
* 2019-06-11 7.9
  add EIGRP
  fix ASA user/connection/session-count
* 2019-06-05 7.8
  GLPLugin with better ip4/ip6 handling
  fix huawei subclasses
  interfaces --name filter expression can contain _adminup_ as a secondary
  filter
  route modes can handle v6
  use OSPFV3-MIB, support v6
  add CISCO-BGP4-MIB, support v6
* 2019-04-12 7.7
  add Barracuda
* 2019-04-12 7.6.1
  add mode count-connections for F5
* 2019-03-20 7.6
  add mode watch-ospf-neighbors
* 2019-02-19 7.5.0.1
  remove adsl-line-mib
* 2019-02-18 7.5
  add Draytek Vigor
* 2019-01-09 7.4.3
  add mode interface-security (cisco)
* 2018-12-17 7.4.2.1
  finish ha-status for cisco wlc
* 2018-12-12 7.4.2
  start ha for cisco wlc
  improve paloalto uptime model string
  improve ucd memory
* 2018-12-04 7.4.1.2
  fix cisco bgp for routers which do not export the proptietary mib, but bgp4
* 2018-12-04 7.4.1.1